--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 .DS_Store
 report_latex/zadani/zadani.docx
 report_latex/zadani/navrh_33BAP_33DIP.doc
+.idea
+papers
+results
+code/saved_models
+code/logits
+code/datasets
